--- a/src/app/layouts/header/header.component.html
+++ b/src/app/layouts/header/header.component.html
@@ -163,13 +163,13 @@
 
         <a class="nav-link nav-profile d-flex align-items-center pe-0" href="#" data-bs-toggle="dropdown">
           <!-- <img src="assets/img/profile-img.jpg" alt="Profile" class="rounded-circle"> -->
-          <span class="d-none d-md-block dropdown-toggle ps-2">K. Anderson</span>
+          <span class="d-none d-md-block dropdown-toggle ps-2">{{username}}</span>
         </a><!-- End Profile Iamge Icon -->
 
         <ul class="dropdown-menu dropdown-menu-end dropdown-menu-arrow profile">
           <li class="dropdown-header">
-            <h6>Kevin Anderson</h6>
-            <span>Web Designer</span>
+            <h6>{{username}}</h6>
+            <span>{{role}}</span>
           </li>
           <li>
             <hr class="dropdown-divider">
@@ -206,7 +206,7 @@
           </li>
 
           <li>
-            <a class="dropdown-item d-flex align-items-center" href="#">
+            <a class="dropdown-item d-flex align-items-center" (click)="singout()">
               <i class="bi bi-box-arrow-right"></i>
               <span>Sign Out</span>
             </a>
